HOTFIX: Fix inputs on safari and iOS

--- a/app/assets/stylesheets/components/_reset.css.sass
+++ b/app/assets/stylesheets/components/_reset.css.sass
@@ -11,7 +11,9 @@ input[type="text"]
   font-size: 1rem
 
 textarea,
-input[type="text"]
+input[type="text"],
+input[type="email"],
+input[type="password"]
   -webkit-user-select: auto
 
 textarea
